--- a/Портфолио.md
+++ b/Портфолио.md
@@ -33,8 +33,14 @@
 **Артефакты:** План тестирования и тест-кейсы, Программа и методика испытаний (ПМИ), Руководство пользователя.
 **Репозиторий с деталями:** [Проект "Тестирование"](https://github.com/AnastasyaYakebenko/Testing_and_documentation-/blob/main/Описание%20задачи.md)
 
+### 7. Моделирование финансового процесса в IDEF0 (Стоматология)
+**Суть:** Анализ и оптимизация процесса движения денежных средств в стоматологической клинике на этапе до выплаты заработной платы с использованием функциональной модели.
+**Артефакты:** IDEF0-диаграмма, описание целей и задач моделирования.
+**Результаты:** Выявлены узкие места и дублирование функций, предложена оптимизация, сокращающая время прохождения документов с 5 до 2 дней.
+**Репозиторий с деталями:** [Проект "IDEF0-моделирование"](https://github.com/AnastasyaYakebenko/IDEFO-/blob/main/Описание%20задачи.md)
+
 ## Ключевые навыки
 *   **Сбор и анализ требований:** Интервью со стейкхолдерами, спецификации SRS, User Stories.
-*   **Моделирование:** BPMN, UML (Use Case, Sequence, State Machine), DFD, ER-диаграммы (Chen, Crow's Foot).
+*   **Моделирование:** BPMN, UML (Use Case, Sequence, State Machine), DFD, ER-диаграммы (Chen, Crow's Foot), IDEF0.
 *   **Проектирование:** Прототипирование (Figma), разработка ПМИ, User Story Mapping, словари данных.
 *   **Документирование:** Тест-кейсы, руководства пользователя, бизнес-правила, глоссарии.
