--- a/Портфолио.md
+++ b/Портфолио.md
@@ -44,3 +44,9 @@
 *   **Моделирование:** BPMN, UML (Use Case, Sequence, State Machine), DFD, ER-диаграммы (Chen, Crow's Foot), IDEF0.
 *   **Проектирование:** Прототипирование (Figma), разработка ПМИ, User Story Mapping, словари данных.
 *   **Документирование:** Тест-кейсы, руководства пользователя, бизнес-правила, глоссарии.
+## Используемые инструменты
+*   **Моделирование:** Draw.io
+*   **Прототипирование:** Figma
+*   **Документирование:** Google Docs
+*   **Управление задачами и карты:** Miro
+*   **Хостинг и версионирование:** GitHub
